--- a/Section 6 - CSS Properties/6.4 Motivation Meme Project/index.html
+++ b/Section 6 - CSS Properties/6.4 Motivation Meme Project/index.html
@@ -1,5 +1,5 @@
 <!-- 
-  TODO: Create a motivational post website.
+  Create a motivational post website.
 Style it how ever you like. 
 Look at the goal image for inspiration.
 But it must have the following features:
@@ -14,3 +14,20 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <title>Motivational Meme Project</title>
+      <link rel="stylesheet" href="style.css"stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+      
+      <div class="container">
+        <img src="./assets/images/meme.png" alt="meme image">
+        <h1>DON'T WORRYs</h1>
+        <p>IT will fix it</p>
+      </div>
+
+    </body>
+</html>
